[tool.poetry]
name = "code-review-ai"
version = "0.1.0"
description = ""
authors = ["HurmakR <r.hurmak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
httpx = "^0.27.2"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
openai = "^1.53.0"
redis = "^5.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
pytest-httpx = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
